--- a/SPlayer.html
+++ b/SPlayer.html
@@ -20,7 +20,7 @@ Grupo 46    PL21
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="assets/js/logout.js"></script>
-    <script type="text/javascript" src="assets/js/cookies.js"></script> 
+     
     <script type="module" src="assets/js/Splayer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
@@ -54,7 +54,7 @@ Grupo 46    PL21
                     </li>
   <li id="login"><a href="login.html">Login</a></li>                    <li>
                         <div class="cp_wrapper">
-                            <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);"
+                            <input type='color' id="colorPicker" oninput="changeColour()" onchange="localStorage.setItem('color',this.value);;"
                                 value="getDefaultColor()" style="width:100%;">
                         </div>
                     </li>
