--- a/jogo.html
+++ b/jogo.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
 
-    <script type="text/javascript" src="assets/js/cookies.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  
     <script type="text/javascript" src="assets/js/logout.js"></script>
@@ -46,7 +46,7 @@
                     </li>
   <li id="login"><a href="login.html">Login</a></li>                    <li>
                         <div class="cp_wrapper">
-                            <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);"
+                            <input type='color' id="colorPicker" oninput="changeColour()" onchange="localStorage.setItem('color',this.value);;"
                                 value="getDefaultColor()" style="width:100%;">
                         </div>
                     </li>
