--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -20,7 +20,7 @@ Grupo 46    PL21
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script type="text/javascript" src="assets/js/Cookies.js"></script>
+    
     <script type="text/javascript" src="assets/js/logout.js"></script>
     <script type="text/javascript" src="assets/js/scoreIndividual.js"></script>
 
@@ -52,7 +52,7 @@ Grupo 46    PL21
             </li>
             <li id="login"><a href="login.html">Login</a></li>
             <li><div class="cp_wrapper">
-                <input type="color" id="colorPicker" oninput="changeColour()" onchange="Cookie.set('color', this.value, 365);" value="getDefaultColor()" style="width:100%;"></div></li>
+                <input type='color' id="colorPicker" oninput="changeColour()" onchange="localStorage.setItem('color',this.value);;" value="getDefaultColor()" style="width:100%;"></div></li>
         </div>
     </ul>
 </nav>
@@ -81,7 +81,7 @@ Grupo 46    PL21
         </div>
     </footer>
 <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
-    var color=Cookie.get("color");
+    var color=localStorage.getItem('color');
     
     var colorPicker = document.getElementById("colorPicker");
     var navbar= document.getElementsByClassName("navbar");
