fixed footer again lol

--- a/info.html
+++ b/info.html
@@ -140,7 +140,7 @@ Grupo 46    PL21
 
     </div>
     <br>
-    <footer id="footer">
+    <footer id="footer" class="relative-bottom">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46    PL21 </p>
