--- a/jogo.html
+++ b/jogo.html
@@ -124,8 +124,8 @@
 
 
     </div>
-    <br>
-    <footer id="footer">
+              <!-- Só neste ficheiro é que é diferente por isso tá in-line -->          
+    <footer  id="footer"  >
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
             <p> Grupo 46    PL21 </p>
