win condition bugs e tal

--- a/SPlayer.html
+++ b/SPlayer.html
@@ -23,6 +23,7 @@ Grupo 46    PL21
      
     <script type="module" src="assets/js/Splayer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="assets/js/constants.js"></script> 
 
 
    
@@ -74,7 +75,7 @@ Grupo 46    PL21
                 <h2> Tempo </h2>
                 <p> <span id="timer">0</span> s</p>
                 <h2> Minas </h2>
-                <p> ## </p>
+                <p id="minesLeft"> ## </p>
                 <button id="btnReset" >Restart</button>
             </div>
 
