contagem de minesLeft corrigida confetti ainda na merda

--- a/SPlayer.html
+++ b/SPlayer.html
@@ -74,7 +74,7 @@ Grupo 46    PL21
                 <h2> Tempo </h2>
                 <p> <span id="timer">0</span> s</p>
                 <h2> Minas </h2>
-                <p> ## </p>
+                <p>  <span id="minesLeft">0</span> </p>
                 <button id="btnReset" >Restart</button>
             </div>
 
