--- a/jogo.html
+++ b/jogo.html
@@ -69,7 +69,7 @@
         </div>
         <br>
 
-        <div class="SpaceAround" style="border-radius: 25px 25px 0 0;">
+        <div  class="SpaceAround" style="border-radius: 25px 25px 0 0; width: 70%;">
             <div class="RangeAndLabel">
                 <div class="value" id="lbl1">9</div>
                 <div class="RangeSlider">
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="RangeAndLabel">
+            <div class="RangeAndLabel" >
                 <div class="value" id="lbl2">9</div>
                 <div class="RangeSlider">
                     <input id="slider2" type="range" min="1" max="24" step="1" value="8">
@@ -95,7 +95,7 @@
             </div>
         </div>
 
-        <div class="SpaceAround" style="border-radius: 0 0 25px 25px;">
+        <div class="SpaceAround" style="border-radius: 0 0 25px 25px; width: 70%;">
             <!--Centered text div-->
             <div class="label">
                 Altura do Campo
