--- a/registar.html
+++ b/registar.html
@@ -63,6 +63,25 @@ Grupo 46    PL21
             <br> <br>
             <input class="InputBox" id="email" type="text" placeholder="E-Mail">
             <br> <br>
+            <label for="faixaEtária">Faixa Etária</label>
+            <select id="faixaEtária" name="faixaEtária">
+                <option value="11-20">11-20</option>
+                <option value="21-30">21-30</option>
+                <option value="31-40">31-40</option>
+                <option value="41-50">41-50</option>
+                <option value="51-60">61-60</option>
+                <option value="61-70">61-70</option>
+                <option value="71-80">71-80</option>
+                <option value=">80"><80</option>
+            </select>
+            <br> <br>
+            <label for="genero">Género</label>
+            <select id="genero" name="género">
+                <option value="f">Feminino</option>
+                <option value="m">Masculino</option>
+                <option value="nb">Não Binário</option>
+            </select>
+            <br> <br>
             <input class="InputBox" id="pass" type="password" placeholder="Password">
             <br> <br>
             <input class="InputBox" id="passAgain" type="password" placeholder="Repetir Password">
