--- a/score.html
+++ b/score.html
@@ -62,11 +62,15 @@ Grupo 46    PL21
     <div>
         <div id="multicolor2">
         <table id="scoreboard" >
+            <tr>
+                <td>Jogador</td>
+                <td>Tempo</td>
+            </tr>
         </table>
         </div>
     </div>
 </div>
-    <br> <br>  <br> <br> <br>  <br> <br> <br>  <br> 
+    <br> <br>  <br> <br> <br>  <br> <br> <br>  <br>
     <footer id="footer">
         <div class="cadeiraInfo">
             <p> ITW - 2020/2021 </p>
