REMOVED ALL VARS COMPLETLY

--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -81,12 +81,12 @@ Grupo 46    PL21
         </div>
     </footer>
 <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
-    var color=localStorage.getItem('color');
+    let color=localStorage.getItem('color');
     
-    var colorPicker = document.getElementById("colorPicker");
-    var navbar= document.getElementsByClassName("navbar");
-    var element1= document.getElementById("multicolor1"); //A palavra "regras"
-    var element2= document.getElementById("multicolor2"); //O botão para jogar
+    let colorPicker = document.getElementById("colorPicker");
+    let navbar= document.getElementsByClassName("navbar");
+    let element1= document.getElementById("multicolor1"); //A palavra "regras"
+    let element2= document.getElementById("multicolor2"); //O botão para jogar
      navbar[0].style.backgroundColor=color;
      colorPicker.value=color;
      element1.style.backgroundColor=color;
