--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@ Grupo 46    PL21
     <div id="multicolor5" class="LoginBox">
         <p id="multicolor1" class="Title">Login</p>
         <form class="form1">
-            <input class="InputBox" id="username" type="text" placeholder="Username">
+            <input class="InputBox" id="username" type="text" placeholder="Username ou E-Mail">
             <br> <br>
             <input class="InputBox" id="pass" type="password" placeholder="Password">
             <br> <br><br>
