--- a/registar.html
+++ b/registar.html
@@ -68,7 +68,7 @@ Grupo 46    PL21
             <input class="InputBox" id="passAgain" type="password" placeholder="Repetir Password">
             <br> <br>
             <br>
-            <a class="submit" id="multicolor" onclick="createAcc()">Entrar</a>
+            <a class="submit" id="multicolor" onclick="createAcc()">Registar</a>
             <br> <br> <br> 
         
             <p >
