--- a/jogo.html
+++ b/jogo.html
@@ -44,7 +44,9 @@
                             <li id="mustLogin"><a href="./scoreindivid.html">Individual</a></li>
                         </ul>
                     </li>
-  <li id="login"><a href="login.html">Login</a></li>                    <li>
+                    <li><a href="estatisticas.html">Estatísticas</a></li>
+                    <li id="login"><a href="login.html">Login</a></li>
+                    <li>
                         <div class="cp_wrapper">
                             <input type="color" id="colorPicker" oninput="changeColour()" onchange="localStorage.setItem('color',this.value);;"
                                 value="getDefaultColor()" style="width:100%;">
