--- a/registar.html
+++ b/registar.html
@@ -49,6 +49,7 @@ Grupo 46    PL21
                         <li><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
+                <li><a href="estatisticas.html">Estatísticas</a></li>
                 <li id="login"><a href="login.html">Login</a></li>
                 <li><div class="cp_wrapper">
                     <input type="color" id="colorPicker" oninput="changeColour()" onchange="localStorage.setItem('color',this.value);;" value="getDefaultColor()" style="width:100%;"></div></li>
