--- a/jogo.html
+++ b/jogo.html
@@ -62,9 +62,9 @@
         <div class="container" style="width: 10%;">
 
             <select id="select-css" class="custom-select">
-                <option value="Easy">Fácil</option>
+                <option value="Fácil">Fácil</option>
                 <option value="Normal">Normal</option>
-                <option value="Hard">Difícil</option>
+                <option value="Difícil">Difícil</option>
                 <option value="Custom">Custom</option>
             </select>
             <span class="focus"></span>
