--- a/estatisticas.html
+++ b/estatisticas.html
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script type="text/javascript" src="assets/js/logout.js"></script>
-    <script type="text/javascript" src="assets/js/jogo.js"></script>
+    <script type="text/javascript" src="assets/js/stats.js"></script>
     <title>Estatísticas</title>
 </head>
 
@@ -56,8 +56,23 @@
         </ul>
     </nav>
     <!--FIM NAVBAR-->
+    <br> <br>
+    <div class="container" style="width: 10%;">
 
+        <select id="select-css" class="custom-select" onchange="loadStats(this.value)">
+            <option value="Fácil">Fácil</option>
+            <option value="Normal">Normal</option>
+            <option value="Difícil">Difícil</option>
+        </select>
+        <span class="focus"></span>
+    </div>
+    <br> <br>
+    <!--List of stats:-->
+    <p id="minesOpened"> Minas descobertas:</p>
+    <p id="minesFlagged"> Minas marcadas com bandeira:</p>
+    <p id="cellsRevealed"> Casas reveladas:</p>
 
+    
 
 
 
