--- a/score.html
+++ b/score.html
@@ -15,6 +15,7 @@ Grupo 46    PL21
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
+    <link rel="stylesheet" type="text/css" href="./css/jogo.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -60,7 +61,18 @@ Grupo 46    PL21
 <!--FIM NAVBAR-->
 
 <h1>Scoreboard</h1>
-    <div>
+<br>
+<div class="container" style="width: 10%;">
+
+    <select id="select-css" class="custom-select" onchange="loadScoreTable(this.value)">
+        <option value="Fácil">Fácil</option>
+        <option value="Normal">Normal</option>
+        <option value="Difícil">Difícil</option>
+    </select>
+    <span class="focus"></span>
+</div>
+<br> 
+<div id="tableContainer" style="width: 70%;">
         <div id="multicolor2">
         <table id="scoreboard" >
             <tr>
