--- a/Mplayer.html
+++ b/Mplayer.html
@@ -72,25 +72,20 @@ Grupo 46    PL21
 
 
             <div class="gameInfo">
-                <div class="defaulInfo">
-                    <h2> Tempo </h2>
-                    <p> #timer </p>
-                    <h2> Minas </h2>
-                    <p> ## </p>
-                </div>
-
-                <br>
-                <br>
                 <div class="jogadores">
-                    <div>
-                        <h2> Jogador 1 </h2>
-                        <h4> Pontos </h4>
-                        <p> ## </p>
+                    <div id="p1">
+                        <h2 id="player1"> Jogador 1 </h2>
+                        <h4>Minas</h4>
+                        <p id="minasPlayer1">0</p>
+                        <h4>Jogadas</h4>
+                        <p id="player1jogadas">0</p>
                     </div>
-                    <div>
-                        <h2> Jogador 2 </h2>
-                        <h4> Pontos </h4>
-                        <p> ## </p>
+                    <div id="p2">
+                        <h2 id="player2"> Jogador 2 </h2>
+                        <h4>Minas</h4>
+                        <p id="minasPlayer2">0</p>
+                        <h4>Jogadas</h4>
+                        <p id="player2jogadas">0</p>
                     </div>
                 </div>
             </div>
