--- a/Mplayer.html
+++ b/Mplayer.html
@@ -78,14 +78,14 @@ Grupo 46    PL21
                         <h4>Minas</h4>
                         <p id="minasPlayer1">0</p>
                         <h4>Jogadas</h4>
-                        <p id="player1jogadas">0</p>
+                        <p id="jogadasPlayer1">0</p>
                     </div>
                     <div id="p2">
                         <h2 id="player2"> Jogador 2 </h2>
                         <h4>Minas</h4>
                         <p id="minasPlayer2">0</p>
                         <h4>Jogadas</h4>
-                        <p id="player2jogadas">0</p>
+                        <p id="jogadasPlayer2">0</p>
                     </div>
                 </div>
             </div>
