--- a/score.html
+++ b/score.html
@@ -77,7 +77,7 @@ Grupo 46    PL21
         <table id="scoreboard" >
             <tr>
                 <td>Jogador</td>
-                <td>Tempo</td>
+                <td>Nº Jogadas</td>
             </tr>
         </table>
         </div>
