--- a/jogo.html
+++ b/jogo.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!-- ITW - 2021/2022
+Grupo 46    PL21
+53687 - Ariana Dias
+56931 - Diogo Forte
+58628 - Miguel Miguel -->
+
 <html lang="pt">
 
 <head>
